fixed the logo text overflow

--- a/style.css
+++ b/style.css
@@ -30,21 +30,22 @@ header .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 10%;
+  top: 20%;
   width: 100%;
-  height: 8%;
-  background-color:  black;
-  opacity: 50%;
+  background-color: HSLA(0, 0%, 0%, 0.6);
   gap: 30px;
+  overflow: hidden;
 }
 
-header .container p{
-    color: white;
-    font-size: 3rem;
-    font-weight: bolder;
+header .container p {
+  color: white;
+  font-size: 3rem;
+  font-weight: bolder;
 }
 
 .form-intro {
+  flex: 1;
+  padding-top: 100px;
   line-height: 1.5;
   display: flex;
   flex-direction: column;
@@ -76,6 +77,7 @@ main {
 }
 
 .form {
+    flex: 1;
   margin-bottom: 100px;
   display: flex;
   flex-direction: column;
